# directcompute_torch

./: .gitignore  Capture.txt  Capture2.txt  LICENSE  MANIFEST.in  PYPI_README.md  README.md  UnetCapture.txt  UnetCapture2.txt  asd.py  bench_lenet.py  bench_matmul.py  bench_uma_crossover.py  blur.hlsl  compare_unet_20batch.py  compile_shaders.bat  compile_x64.bat  debug_alexnet.py  debug_lenet.py  diagnose_gradient_clip.py  diagnose_unet.py  diagnose_unet_backward.py  diagnose_unet_pipeline.py  diagnose_unet_spatial.py  diagnose_unet_timing.py  download_mobilenet.py  engine.cpp  example_custom_shader_usage.py  example_custom_transformer_layers.py  export_onnx.py  gpu_pipeline_debug.py  main.cpp  matmul.hlsl  matmul_coarsened_2d.hlsl  nn.js  nn_add.hlsl  nn_add_bias.hlsl  nn_argmax_correct.hlsl  nn_batchnorm_backward_dx.hlsl  nn_concat_insert.hlsl  (+69 more)
backup_old_version/: bench_matmul.py  bench_matmul_overhead.py  convert_shaders.py  matmul_coarsened.hlsl  matmul_lib.cpp  matmul_tiled.hlsl  matmul_tiled_unroll.hlsl  nn_accumulate_scalar.hlsl  nn_bias_grad.hlsl  nn_bias_relu.hlsl  nn_col2im.hlsl  nn_conv_backprop_input.hlsl  nn_matmul_transpose_b.hlsl  nn_mnist.py  nn_sgd.hlsl  speed_test_lenet.py  train_alexnet.py  train_alexnet_pytorch.py  train_lenet.py  train_lenet_pytorch.py  webcam_blur.cpp
directcompute_nn/: __init__.py  compile_engine.bat  nn_adam.hlsl  nn_batchnorm_backward_reduce.hlsl  nn_batchnorm_forward.hlsl  nn_batchnorm_mean_var.hlsl  nn_conv_backprop_input_fused.hlsl  (+17 more)
directcompute_nn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+2 files in other folders)
